# stub_grpc_py

./: README.md  helloworld_pb2.py  pyproject.toml
src/stub_grpc_py/: __init__.py  greeter_client.py  greeter_server.py
tests/: helloworld_test.py
