[project]
name = "stub-grpc-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryosuketc", email = "43229670+ryosuketc@users.noreply.github.com" }
]
dependencies = [
    "grpcio>=1.64.1",
    "grpcio-tools>=1.64.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "grpcio-testing>=1.65.1",
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stub_grpc_py"]
